(feat) Adjusted alignment issues in movies seciton. Fixed sizing of images in music section.

--- a/challenge_29/styles.scss
+++ b/challenge_29/styles.scss
@@ -214,7 +214,7 @@ html, body {
 		background-position: center;
 		display: flex;
 		box-shadow: 0 1rem 2rem -1rem;
-		margin: 1rem 0;
+		margin: 1.2rem 0;
 
 		&-local {
 			background-image: url("img/video-local-programming.jpg");
@@ -229,7 +229,7 @@ html, body {
 			background-image: url("img/video-simpsons.jpg");
 			background-repeat: no-repeat;
 			background-size: cover;
-
+			margin: .5rem 0;
 			height: 6.75rem;
 			width: 11.75rem;
 		}
@@ -275,18 +275,21 @@ html, body {
 	&__playing {
 		display: flex;
 		flex-direction: column;
+		margin-top: -1rem;
 
 		&-top {
 			display: flex;
+			align-items: center;
 		}
 
 		&-img{
-			height: 3rem;
-			width: 3rem;
+			height: 4rem;
+			width: 4rem;
 		}
 		
 		&-bar {
 			display: flex;
+			align-items: center;
 		}
 
 		&-progress {
@@ -329,6 +332,8 @@ html, body {
 
 	&__playlist {
 		display: flex;
+		align-items: center;
+		margin-top: -2rem;
 	}
 }
 
@@ -345,10 +350,15 @@ html, body {
 		height: 5rem;
 		width: 5rem;
 		box-shadow: 0 .75rem 2rem -1.5rem;
+		background-size: cover;
 		position: relative;
+		margin: 1rem 0rem;
 		
 		&-a {
 			background-image: url("img/music-with-you.jpg");
+			height: 7rem;
+			width: 7rem;
+			margin: 0rem;
 		}
 
 		&-b {
